changes in version 1.3.5 (2010-01-18)

- `gt gff3 -tidy` cleans up multi-features with different parents


changes in version 1.3.4 (2009-11-19)

- majority: bug fixes, cleanups
- new tool: 'gt ltrdigest'
- new tool: 'gt convertseq'
- new tool: 'gt repfind'
- track order can be specified in AnnotationSketch
- new gcc compatibility fixes
- CustomStream and CustomVisitor base classes allow implementation of new
  functionality in {Ruby, Python}


changes in version 1.3.3 (2009-07-10)

- new tool `gt interfeat` added
- new tool `gt mergefeat` added
- new tool `gt dupfeat` added
- `gt gff3 -tidy` cleans up features with duplicate attributes
- new tool `gt ltrdigest` added


changes in version 1.3.2 (2009-04-29)

- bug fixes and cleanup


changes in version 1.3.1 (2009-04-24)

- `gt extractfeat` has new options -o, -gzip, and -bzip2
- `gt splitfasta` has new option -numfiles
- new tool `gt sketch_page` added
- `gt sketch` has new option -flattenfiles
- bug fixes


changes in version 1.3.0 (2008-12-03)

- `gt bed_to_gff3` has new options -featuretype, -thicktype, and -blocktype
- `gt sketch` has new option -input
- many extensions and some changes to the C API. E.g., AnnotationSketch now
  allows to define track selector functions and custom tracks.


changes in version 1.2.2 (2008-11-04)

- new tool `gt tallymer` added
- new tool `gt congruence` added
- the GenomeTools Python bindings (see gtpython/README) have been added
- new tool `gt bed_to_gff3` added


changes in version 1.2.1 (2008-11-03)

- bug fixes


changes in version 1.2.0 (2008-10-04)

- `gt shredder` has new option -sample
- `gt filter` has new options -targetbest and -maxgenescore
- `gt gff3` has new option -typecheck
- the GFF3 parser can handle embedded FASTA sequences
- `gt gff3` has new option -width to format embedded FASTA sequences
- new tool `gt gff3validator` has been added
- `gt view` has been renamed to `gt sketch`
- `gt gff3` has new option -tidy


changes in version 1.1.2 (2008-07-04)
